data/derived/comb/progs/unify/prog3917.ml.out
Characters 28-38:
  let fixpoint (f,b) = wwhile (b = f(b)),b;;
                              ^^^^^^^^^^
Error: This expression has type bool but an expression was expected of type
         ('a -> 'a * bool) * 'a
